--- a/PRN222/PRN222/Views/Shared/_Layout.cshtml
+++ b/PRN222/PRN222/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold text-primary" asp-controller="Home" asp-action="Index">
-                     Hệ thống GPLX PRN222
+                    Hệ thống GPLX PRN222
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -22,9 +22,41 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            
+                            @if (User.IsInRole("Admin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Quản trị</a>
+                                </li>
+                            }
+
+                            @if (User.IsInRole("Teacher"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Teacher" asp-action="Index">Khóa học</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="" asp-action="">Đánh giá</a>
+                                </li>
+                                <li class="nav-item">
+                                    <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+                                        <button type="submit" class="nav-link btn btn-link text-dark p-0" style="text-decoration:none;">Đăng xuất</button>
+                                    </form>
+                                </li>
+                            }
+
+                            @if (User.IsInRole("Student"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Student" asp-action="Index">Học viên</a>
+                                </li>
+                            }
+                        }                        
                     </ul>
                 </div>
+
             </div>
         </nav>
     </header>
